build/log/idf_py_stderr_output_38593
Command: make -j 10 all
/Users/kagamirudo/002/main/server.c: In function 'color_api_handler':
/Users/kagamirudo/002/main/server.c:96:13: error: implicit declaration of function 'stop_effect' [-Wimplicit-function-declaration]
   96 |             stop_effect();
      |             ^~~~~~~~~~~
/Users/kagamirudo/002/main/server.c:110:13: error: implicit declaration of function 'set_rgb_color' [-Wimplicit-function-declaration]
  110 |             set_rgb_color(r, g, b);
      |             ^~~~~~~~~~~~~
/Users/kagamirudo/002/main/server.c: In function 'effect_api_handler':
/Users/kagamirudo/002/main/server.c:139:5: error: 'effect_running' undeclared (first use in this function)
  139 |     effect_running = true;
      |     ^~~~~~~~~~~~~~
/Users/kagamirudo/002/main/server.c:139:5: note: each undeclared identifier is reported only once for each function it appears in
/Users/kagamirudo/002/main/server.c:142:21: error: 'rainbow_effect_task' undeclared (first use in this function)
  142 |         xTaskCreate(rainbow_effect_task, "rainbow", 4096, NULL, 5,
      |                     ^~~~~~~~~~~~~~~~~~~
/Users/kagamirudo/002/main/server.c:143:22: error: 'effect_task_handle' undeclared (first use in this function); did you mean 'effect_api_handler'?
  143 |                     &effect_task_handle);
      |                      ^~~~~~~~~~~~~~~~~~
      |                      effect_api_handler
/Users/kagamirudo/002/main/server.c:146:21: error: 'pulse_effect_task' undeclared (first use in this function)
  146 |         xTaskCreate(pulse_effect_task, "pulse", 4096, colors, 5,
      |                     ^~~~~~~~~~~~~~~~~
/Users/kagamirudo/002/main/server.c:149:21: error: 'fast_cycle_effect_task' undeclared (first use in this function)
  149 |         xTaskCreate(fast_cycle_effect_task, "fast", 4096, NULL, 5,
      |                     ^~~~~~~~~~~~~~~~~~~~~~
/Users/kagamirudo/002/main/server.c:152:21: error: 'gradient_effect_task' undeclared (first use in this function)
  152 |         xTaskCreate(gradient_effect_task, "gradient", 4096, NULL, 5,
      |                     ^~~~~~~~~~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/server.c.obj] Error 1
make[2]: *** Waiting for unfinished jobs....
make[1]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [all] Error 2
